permission to launch (staging)

--- a/site/web/app/themes/harper/resources/assets/config.json
+++ b/site/web/app/themes/harper/resources/assets/config.json
@@ -6,6 +6,9 @@
     ],
     "customizer": [
       "./scripts/customizer.js"
+    ],
+    "scroll": [
+      "./scripts/scroll.js"
     ]
   },
   "publicPath": "/app/themes/harper",
