--- a/site/web/app/themes/harper/package.json
+++ b/site/web/app/themes/harper/package.json
@@ -104,10 +104,18 @@
     "yargs": "~11.0.0"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "barba.js": "^1.0.0",
     "bulma": "^0.7.2",
+    "bulma-extensions": "^3.0.0",
+    "gsap": "^2.0.2",
     "headroom.js": "^0.9.4",
     "jquery": "^3.3.1",
+    "material-design-lite": "^1.3.0",
+    "materialize-css": "^1.0.0-rc.2",
+    "scrollmagic": "^2.0.6",
+    "scrollreveal": "^4.0.5",
+    "stickybits": "^3.5.7",
     "tachyons-sass": "~4.9"
   }
 }
