--- a/site/web/app/themes/harper/package.json
+++ b/site/web/app/themes/harper/package.json
@@ -111,6 +111,7 @@
     "gsap": "^2.0.2",
     "headroom.js": "^0.9.4",
     "jquery": "^3.3.1",
+    "lozad": "^1.6.0",
     "material-design-lite": "^1.3.0",
     "materialize-css": "^1.0.0-rc.2",
     "scrollmagic": "^2.0.6",
