--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -37,9 +37,9 @@ jobs:
       SITE_KEY: dreamdefendact.org
     steps:
       - checkout
-      - restore_cache:
-          key: v1-ansible-galaxy-{{ checksum "trellis/requirements.yml" }}
-      - restore_cache:
+      - add_ssh_keys:
+          fingerprints:
+            - "5e:d5:c5:af:1b:ef:9e:72:67:5b:cf:f5:87:51:9f:da"
       - run:
           name: Set Ansible Vault Pass
           command: echo $ANSIBLE_VAULT_PASSWORD > .vault_pass
@@ -51,7 +51,6 @@ jobs:
       - deploy:
           command: ansible-playbook deploy.yml -e env=$SITE_ENV -e site=$SITE_KEY -vvvv
           working_directory: trellis
-# TODO: Customize the workflow
 workflows:
   version: 2
   tiller:
