--- a/trellis/group_vars/production/wordpress_sites.yml
+++ b/trellis/group_vars/production/wordpress_sites.yml
@@ -10,7 +10,7 @@ wordpress_sites:
           - www.dreamdefendact.org
           - dreamdefendact.com
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
-    repo: git@github.com:pixelcollective/vote.dreamdefenders.org.git # replace with your Git repo URL
+    repo: git@github.com:pixelcollective/dreamdefendact.org.git # replace with your Git repo URL
     repo_subtree_path: site # relative path to your Bedrock/WP directory in your repo
     branch: master
     multisite:
