all dependencies updated. pre 5.0 commit.

--- a/trellis/group_vars/development/wordpress_sites.yml
+++ b/trellis/group_vars/development/wordpress_sites.yml
@@ -5,7 +5,7 @@
 wordpress_sites:
   dreamdefendact.org:
     site_hosts:
-      - canonical: dreamdefendact.pix
+      - canonical: dreamdefendact.local
     local_path: ../site # path targeting local Bedrock site directory (relative to Ansible root)
     admin_email: developers@tinypixel.io
     multisite:
