--- a/site/composer.json
+++ b/site/composer.json
@@ -36,6 +36,14 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
+    },
+    {
+      "type": "composer",
+      "url": "https://packages.tinypixel.io/satispress/"
+    },
+    {
+      "type": "vcs",
+      "url": "https://github.com/pixelcollective/corporate-communion"
     }
   ],
   "require": {
@@ -46,26 +54,28 @@
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-config": "1.0.0",
-    "roots/soil": "^3.7",
-    "johnbillion/extended-cpts": "^4.2",
+    "roots/soil": "^3.7.3",
+    "wpackagist-plugin/updraftplus": ">=1",
+    "wpackagist-plugin/stream": "^3.2",
+    "tiny-packagist/wp-migrate-db-pro": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-cli": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-media-files": ">=1",
+    "tiny-packagist/wp-migrate-db-pro-multisite-tools": ">=1",
+    "tiny-packagist/monarch": ">=1",
+    "tiny-pixel/wp-performant-media": ">=1",
+    "tiny-pixel/corporate-communion": "@dev",
     "wpackagist-plugin/rewrite-testing": ">=0.1",
-    "wpackagist-plugin/autodescription": ">=3.0.6",
+    "wpackagist-plugin/autodescription": ">=3",
     "wpackagist-plugin/cdn-enabler": ">=1",
-    "wpackagist-plugin/dark-mode": ">=3",
-    "wpackagist-plugin/dropit": ">=1.3",
-    "wpackagist-plugin/duplicate-post": ">=3.2.2",
-    "wpackagist-plugin/gutenberg": ">=4.0",
-    "wpackagist-plugin/imagify": ">=1.8.0",
-    "wpackagist-plugin/members": ">=2.1.0",
-    "wpackagist-plugin/redirection": ">=3.3.1",
-    "wpackagist-plugin/simple-local-avatars": ">=2.0.0",
+    "wpackagist-plugin/dropit": ">=1",
+    "wpackagist-plugin/duplicate-post": ">=3",
+    "wpackagist-plugin/imagify": ">=1",
+    "wpackagist-plugin/members": ">=2",
+    "wpackagist-plugin/redirection": ">=3",
     "wpackagist-plugin/translatepress-multilingual": ">=1",
-    "wpackagist-plugin/user-switching": ">=1.4",
-    "wpackagist-plugin/wp-action-network": ">=1.1.0",
-    "wpackagist-plugin/wp-dobby": ">=1.3.0",
+    "wpackagist-plugin/wp-dobby": ">=1",
     "wpackagist-plugin/email-templates": ">=1",
-    "wpackagist-plugin/wp-mail-smtp": ">=1",
-    "aaemnnosttv/wp-cli-login-server": "^1.2"
+    "wpackagist-plugin/wp-mail-smtp": ">=1"
   },
   "require-dev": {
     "squizlabs/php_codesniffer": "^3.0.2",
