--- a/trellis/roles/wordpress-setup/defaults/main.yml
+++ b/trellis/roles/wordpress-setup/defaults/main.yml
@@ -5,7 +5,7 @@ nginx_ssl_path: "{{ nginx_path }}/ssl"
 ssl_default_site:
   no_default:
     site_hosts:
-      - canonical: votingguide.org
+      - canonical: example.com
     ssl:
       enabled: true
       provider: self-signed
