--- a/site/composer.json
+++ b/site/composer.json
@@ -36,30 +36,20 @@
     {
       "type": "composer",
       "url": "https://wpackagist.org"
-    },
-    {
-      "type": "composer",
-      "url": "https://packages.tinypixel.io/satispress/"
-    },
-    {
-      "type": "vcs",
-      "url": "https://github.com/pixelcollective/corporate-communion"
     }
   ],
   "require": {
     "php": ">=5.6",
     "composer/installers": "^1.4",
     "vlucas/phpdotenv": "^2.0.1",
-    "johnpbloch/wordpress": "5.0.3",
+    "roots/wordpress": ">5",
     "oscarotero/env": "^1.1.0",
     "roots/wp-password-bcrypt": "1.0.0",
     "roots/wp-config": "1.0.0",
     "roots/soil": "^3.7.3",
     "wpackagist-plugin/updraftplus": ">=1",
     "wpackagist-plugin/stream": "^3.2",
-    "tiny-packagist/monarch": ">=1",
     "tiny-pixel/wp-performant-media": ">=1",
-    "tiny-pixel/corporate-communion": "@dev",
     "wpackagist-plugin/rewrite-testing": ">=0.1",
     "wpackagist-plugin/autodescription": ">=3",
     "wpackagist-plugin/cdn-enabler": ">=1",
